snapshots/com/wadpam/openserver/errors/2-SNAPSHOT/maven-metadata.xml.sha1
4bb6f37e7fe33af1f30b83735762578a0542bc8d